--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 
-# API= http://192.168.0.102:3000/api/
-API= https://ricope-e01a994cf2ab.herokuapp.com/api/
+API= http://192.168.0.102:3000/api/
+# API= https://ricope-e01a994cf2ab.herokuapp.com/api/
 
 SECRET_KEY=4a0c226b0d4e7c11654298e37ccdb71f
 DB=db_receta
