--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,16 @@ dependencies:
   lottie: ^3.3.1
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.9
-  firebase_core: ^3.13.0
+  firebase_core: ^3.13.1
   firebase_messaging: ^15.2.5
   flutter_custom_tabs: ^2.4.0
   firebase_auth: ^5.5.3
   google_sign_in: ^6.3.0
+  firebase_app_check: ^0.3.2+6
+  firebase_ai: ^2.0.0
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.0+1
+  flutter_sound: ^9.28.0
 
 dev_dependencies:
   mockito: ^5.4.5
