--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^12.0.0+1
   flutter_sound: ^9.28.0
+  firebase_remote_config: ^5.4.4
+  mime: ^2.0.0
 
 dev_dependencies:
   mockito: ^5.4.5
