--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,7 +26,7 @@
 		<array>
 			<dict>
 				<key>CFBundleURLName</key>
-				<string>ricope-e01a994cf2ab.herokuapp.com</string>
+				<string>cocinando.shop</string>
 				<key>CFBundleURLSchemes</key>
 				<array>
 					<string>ricope</string>
