--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,16 +40,17 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
 
-    # target.build_configurations.each do |config|
-    #   config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
-    #   config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
-    #     '$(inherited)',
-    #     'PERMISSION_CAMERA=1',
-    #     'PERMISSION_MICROPHONE=0',
-    #     'PERMISSION_SPEECH_RECOGNIZER=0',
-    #     'PERMISSION_LOCATION=0',
-    #     'PERMISSION_STORAGE=0',
-    #   ]
-    # end
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+      # config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+      #   '$(inherited)',
+      #   'PERMISSION_LOCAL_NETWORK=1',
+      #   'PERMISSION_CAMERA=1',
+      #   'PERMISSION_MICROPHONE=1',
+      #   'PERMISSION_SPEECH_RECOGNIZER=1',
+      #   'PERMISSION_LOCATION=0',
+      #   'PERMISSION_STORAGE=0',
+      # ]
+    end
   end
 end
