--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flutter_dotenv: ^5.2.1
-  go_router: ^14.2.0
+  go_router: ^15.2.3
   logging: ^1.2.0
   sqflite: ^2.4.2
   provider: ^6.1.4
@@ -30,32 +30,33 @@ dependencies:
   path: ^1.9.1
   shimmer: ^3.0.0
   lottie: ^3.3.1
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.3.9
-  firebase_core: ^3.13.1
-  firebase_messaging: ^15.2.5
+  firebase_core: ^3.14.0
+  firebase_messaging: ^15.2.7
   flutter_custom_tabs: ^2.4.0
-  firebase_auth: ^5.5.3
+  firebase_auth: ^5.6.0
   google_sign_in: ^6.3.0
-  firebase_app_check: ^0.3.2+6
-  firebase_ai: ^2.0.0
+  firebase_app_check: ^0.3.2+7
+  firebase_ai: ^2.1.0
   image_picker: ^1.1.2
   permission_handler: ^12.0.0+1
   flutter_sound: ^9.28.0
-  firebase_remote_config: ^5.4.4
+  firebase_remote_config: ^5.4.5
   mime: ^2.0.0
   webview_flutter: ^4.2.2
   http: ^1.4.0
+  clarity_flutter: ^1.0.0
 
 dev_dependencies:
   mockito: ^5.4.5
   test: ^1.25.15
-  build_runner: ^2.4.15
-  flutter_lints: ^5.0.0
+  build_runner: ^2.5.3
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
   json_serializable: ^6.9.4
-  very_good_analysis: ^5.1.0
+  very_good_analysis: ^9.0.0
 
 flutter_native_splash:
   color: "#ffffff"
