--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 # 
-API=https://cocinando.shop/api/
-# API= http://192.168.0.102:3000/api/
+#API=https://cocinando.shop/api/
+API=http://192.168.0.100:3001/api/
 
 SECRET_KEY=4a0c226b0d4e7c11654298e37ccdb71f
 DB=db_receta
 CLIENT_ID='615495880468-vaqqmb8h3ihto2np80mbhthuvtovjilu.apps.googleusercontent.com'
 SERVER_CLIENT_ID='615495880468.apps.googleusercontent.com'
+JSONPLACEHOLDER_URL_DOMINIO=google.com
