--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flutter_dotenv: ^5.2.1
-  go_router: ^15.2.3
+  go_router: ^16.0.0
   logging: ^1.2.0
   sqflite: ^2.4.2
   provider: ^6.1.4
@@ -47,6 +47,7 @@ dependencies:
   webview_flutter: ^4.2.2
   http: ^1.4.0
   clarity_flutter: ^1.0.0
+  crypto: ^3.0.6
 
 dev_dependencies:
   mockito: ^5.4.5
