--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,11 @@ dependencies:
   flutter_sound: ^9.28.0
   firebase_remote_config: ^5.4.5
   mime: ^2.0.0
-  webview_flutter: ^4.2.2
-  http: ^1.4.0
   clarity_flutter: ^1.0.0
   crypto: ^3.0.6
+  # PayU integration
+  http: ^1.4.0
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   mockito: ^5.4.5
