--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,9 @@ dependencies:
   mime: ^2.0.0
   clarity_flutter: ^1.0.0
   crypto: ^3.0.6
-  # PayU integration
   http: ^1.4.0
   webview_flutter: ^4.13.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   mockito: ^5.4.5
