--- a/.env
+++ b/.env
@@ -36,3 +36,6 @@ PAYU_CHECKOUT_URL=https://sandbox.checkout.payulatam.com/ppp-web-gateway-payu/
 PAYU_CURRENCY=PEN
 PAYU_LANGUAGE=es
 PAYU_TEST_MODE=true
+
+PAYU_RESPONSE_URL=https://cocinando.shop/api/users/ngonzano@dtransforma.com
+PAYU_CONFIRMATION_URL=https://cocinando.shop/mp/webhook
