--- a/.env
+++ b/.env
@@ -37,5 +37,5 @@ PAYU_CURRENCY=PEN
 PAYU_LANGUAGE=es
 PAYU_TEST_MODE=true
 
-PAYU_RESPONSE_URL=https://cocinando.shop/api/users/ngonzano@dtransforma.com
+PAYU_RESPONSE_URL=https://cocinando.shop/api/v1/docs/
 PAYU_CONFIRMATION_URL=https://cocinando.shop/mp/webhook
