--- a/.env
+++ b/.env
@@ -10,15 +10,13 @@ JSONPLACEHOLDER_URL_DOMINIO=google.com
 
 #PROD
 #PAYU_MERCHANT_ID=1025140
-#PAYU_ACCOUNTT_ID=1034315
+#PAYU_ACCOUNT_ID=1034315
 #PAYU_API_KEY=GtyOI4RDWGO7pBbDQsptJqMQ1J
 #PAYU_API_LOGIN=vll2XHR8E7OJ5Ts
 #PAYU_API_KEYPLUBLIC=PKb7m89A7bE4ok85T90209LL1z
 #PAYU_TEST_MODE=false
 #PAYU_BASE_URL=https://api.payulatam.com
 #PAYU_CHECKOUT_URL=https://checkout.payulatam.com/ppp-web-gateway-payu/
-#PAYU_CURRENCY=PEN
-#PAYU_LANGUAGE=es
 
 
 # PayU Sandbox - Credenciales de prueba Perú
@@ -27,15 +25,12 @@ PAYU_ACCOUNT_ID=512326
 PAYU_API_KEY=4Vj8eK4rloUd272L48hsrarnUA
 PAYU_API_LOGIN=pRRXKOl8ikMmt9u
 PAYU_API_KEYPLUBLIC=PKb7m89A7bE4ok85T90209LL1z
-
-# URLs de Sandbox
+PAYU_TEST_MODE=true
 PAYU_BASE_URL=https://sandbox.api.payulatam.com
 PAYU_CHECKOUT_URL=https://sandbox.checkout.payulatam.com/ppp-web-gateway-payu/
 
 # Configuración
 PAYU_CURRENCY=PEN
 PAYU_LANGUAGE=es
-PAYU_TEST_MODE=true
-
 PAYU_RESPONSE_URL=https://cocinando.shop/api/v1/docs/
 PAYU_CONFIRMATION_URL=https://cocinando.shop/mp/webhook
