--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   webview_flutter: ^4.13.0
   flutter_svg: ^2.0.10+1
   responsive_builder: ^0.7.0
+  flutter_inappwebview: ^6.1.5
+  confetti: ^0.7.0
 
 dev_dependencies:
   mockito: ^5.4.5
