--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,15 +42,15 @@ post_install do |installer|
 
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
-      # config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
-      #   '$(inherited)',
-      #   'PERMISSION_LOCAL_NETWORK=1',
-      #   'PERMISSION_CAMERA=1',
-      #   'PERMISSION_MICROPHONE=1',
-      #   'PERMISSION_SPEECH_RECOGNIZER=1',
-      #   'PERMISSION_LOCATION=0',
-      #   'PERMISSION_STORAGE=0',
-      # ]
+       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+         '$(inherited)',
+         'PERMISSION_LOCAL_NETWORK=0',
+         'PERMISSION_CAMERA=1',
+         'PERMISSION_MICROPHONE=1',
+         'PERMISSION_SPEECH_RECOGNIZER=1',
+         'PERMISSION_LOCATION=0',
+         'PERMISSION_STORAGE=0',
+       ]
     end
   end
 end
