--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   responsive_builder: ^0.7.0
   flutter_inappwebview: ^6.1.5
   confetti: ^0.7.0
+  flutter_animate: ^4.5.2
+  speech_to_text: ^7.2.0
 
 dev_dependencies:
   mockito: ^5.4.5
