--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   go_router: ^16.0.0
   logging: ^1.2.0
   sqflite: ^2.4.2
-  provider: ^6.1.4
+  flutter_bloc: ^9.1.1
+  bloc: ^9.0.0
   shared_preferences: ^2.5.3
   equatable: ^2.0.7
   dio: ^5.8.0
