--- a/ios/Podfile
+++ b/ios/Podfile
@@ -45,12 +45,21 @@ post_install do |installer|
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'PERMISSION_MICROPHONE=1'
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'PERMISSION_SPEECH_RECOGNIZER=1'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'PERMISSION_CAMERA=1'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'PERMISSION_PHOTO_LIBRARY=1'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'PERMISSION_LOCATION=1'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'PERMISSION_NOTIFICATIONS=1'
       
       # Configuración para iOS 13+
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
       
-      # Habilitar capacidades de micrófono
+      # Habilitar capacidades de micrófono y audio
       config.build_settings['ENABLE_BITCODE'] = 'NO'
+      config.build_settings['ENABLE_HARDWARE_ACCELERATION'] = 'YES'
+      
+      # Configuración para reconocimiento de voz
+      config.build_settings['SPEECH_RECOGNITION_ENABLED'] = 'YES'
+      config.build_settings['MICROPHONE_USAGE_ENABLED'] = 'YES'
     end
   end
 end
