--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
     <!-- Características del dispositivo requeridas -->
     <uses-feature android:name="android.hardware.microphone" android:required="true"/>
 
-    <application android:label="CocinandoIA" android:name="${applicationName}" tools:replace="android:label" android:icon="@mipmap/ic_launcher" android:enableOnBackInvokedCallback="true">
+    <application android:label="@string/app_name" android:name="${applicationName}" tools:replace="android:label" android:icon="@mipmap/ic_launcher" android:enableOnBackInvokedCallback="true">
 
         <activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:taskAffinity="" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
 
