--- a/.env.prod
+++ b/.env.prod
@@ -9,3 +9,6 @@ PAYU_CHECKOUT_URL=https://checkout.payulatam.com/ppp-web-gateway-payu/
 
 API=https://cocinando.shop/api/
 NAME_APP='CIA PROD'
+
+DYNATRACE_APP_ID=c83c5ac6-902b-4f26-94e7-4a3fc2746f5d
+DYNATRACE_BEACON_URL=https://prod-beacon.dynatrace.com/mbeacon
