--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,13 @@ linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 
+# Variables de entorno sensibles
+.env
+.env.*
+!.env.example
+**/dynatrace-ids.json
+**/secrets.json
+
 # Flutter generated files and caches
 **/ios/Flutter/Generated.xcconfig
 **/ios/Flutter/flutter_export_environment.sh
