--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  flutter_dotenv: ^5.2.1
-  go_router: ^16.0.0
+  flutter_dotenv: ^6.0.0
+  go_router: ^17.0.1
   logging: ^1.2.0
   sqflite: ^2.4.2
   flutter_bloc: ^9.1.1
@@ -26,24 +26,25 @@ dependencies:
   intl: any
   flutter_localizations:
     sdk: flutter
-  flutter_secure_storage: ^9.2.2
+  flutter_secure_storage: ^10.0.0
   encrypt: ^5.0.3
   path: ^1.9.1
   shimmer: ^3.0.0
   lottie: ^3.3.1
   flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.3.9
-  firebase_core: ^3.15.2
-  firebase_messaging: ^15.2.7
+  firebase_core: ^4.2.1
+  firebase_messaging: ^16.0.4
   flutter_custom_tabs: ^2.4.0
-  firebase_auth: ^5.6.0
+  firebase_auth: ^6.1.2
+  # google_sign_in: ^7.2.0
   google_sign_in: ^6.3.0
-  firebase_app_check: ^0.3.2+7
-  firebase_ai: ^2.3.0
+  firebase_app_check: ^0.4.1+2
+  firebase_ai: ^3.6.0
   image_picker: ^1.1.2
   permission_handler: ^12.0.0+1
   flutter_sound: ^9.28.0
-  firebase_remote_config: ^5.4.5
+  firebase_remote_config: ^6.1.2
   mime: ^2.0.0
   clarity_flutter: ^1.0.0
   crypto: ^3.0.6
@@ -52,7 +53,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   responsive_builder: ^0.7.0
   flutter_inappwebview: ^6.1.5
-  confetti: ^0.7.0
+  confetti: ^0.8.0
   flutter_animate: ^4.5.2
   speech_to_text: ^7.2.0
   fpdart: ^1.2.0
@@ -67,7 +68,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.9.4
-  very_good_analysis: ^9.0.0
+  very_good_analysis: ^10.0.0
 
 flutter_native_splash:
   color: "#ffffff"
