--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^6.9.4
   very_good_analysis: ^10.0.0
+  pigeon: ^24.0.0
 
 flutter_native_splash:
   color: "#ffffff"
